# nofpu_converter

./: LICENSE  README.md
C/: C.layout  README.md  main.c
C#/: C#.slnx  README.md
C#/C#/: Program.cs
C++/: C++.cbp  C++.layout  README.md  nofpu_converter.cpp
Go/: README.md  nofpu_converter.go
Java/: README.md
Java/src/: Main.java
Javascript/: README.md  nofpu_converter.js
Rust/: Cargo.toml
python/: README.md  nofpu_converter.py
src/: main.rs
