[package]
name = "nofpu-decimal-converter"
version = "1.0.0"
authors = ["Benyamin Gharri (Gharri.ir)"]
edition = "2018"
description = "Decimal converter without using Floating Point Unit (FPU)"
repository = "https://github.com/BenyVK/"
readme = "README.md"

[dependencies]

[profile.release]
opt-level = 3          
lto = true            
codegen-units = 1     
panic = "abort"       
debug = false         

[features]
default = ["std"]
std = []
no_std = []           